# skylights

./: .gitignore  .prettierrc.json  CHANGELOG.md  README.md  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: publish.yml  release-please.yml
.zed/: tasks.json
app/: client.tsx  globals.css  layout.tsx  page.tsx
app/search/: actions.ts  client.tsx  page.tsx
drizzle/: 0000_broken_piledriver.sql  0001_spotty_black_widow.sql  0005_easy_master_mold.sql  0008_groovy_old_lace.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
import/: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml
import/migrations/2024-11-13-174237_init/: down.sql  up.sql
import/src/: base_tables.rs  main.rs  ratings.rs  schema.rs  search.rs  utils.rs
jetski/: Cargo.toml  index.ts  package.json
jetski/src/: main.rs
jetsky/: Cargo.toml  Dockerfile  README.md
jetsky/src/: main.rs
lexicons/: list.json.ignore  listItem.json  rel.json
scripts/: generate-jwk.mts
search/: Cargo.toml  Dockerfile  open-library-index.yml  setup-index.sh
search-service/: Dockerfile  entrypoint.sh  open-library-index.yml  search-index.lnx.json
search/examples/: basic.rs
search/src/: main.rs  schema.rs  utils.rs
shared/: drizzle.config.ts  package.json  utils.ts
shared/db/: index.ts
shared/drizzle/: 0006_lumpy_virginia_dare.sql  0007_dapper_gabe_jones.sql
src/: AvatarLink.tsx  auth.ts  encrypted-cookie.ts  utils.ts
src/db/: index.ts  ol-schema.ts  schema.ts
src/items/: BaseCard.tsx  ItemCard.tsx  ListButton.tsx  RatingSlider.tsx  RelCard.tsx  TypeIcon.tsx  UnknownCard.tsx  (+5 more)
web/: .env  drizzle.config.ts  index.html  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  wrangler.toml
web-old/: package.json  pnpm-lock.yaml
(+118 files in other folders)
