[package]
name = "import"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "2.2", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
rayon = "1.10"
itertools = "0.13.0"
num-format = "0.4.4"
rand = "0.8.5"
jsonformat = "2.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
dotenv = "0.15.0"
reqwest = "0.12.9"
