[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13.0"
num-format = "0.4.4"
rand = "0.8.5"
jsonformat = "2.0.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
flate2 = "1.0.35"
meilisearch-sdk = "0.27.1"
futures = "0.3.31"
